<resources>
    <string name="app_name">FixerCurrencyApp</string>
    <string name="hint_text">Enter valid amount</string>
    <string name="default_currency_value">0.0</string>
    <string name="text_eur">EUR</string>
    <string name="text_usd">USD</string>
    <string name="text_none">None</string>
    <string name="text_jpy">JPY</string>
    <string name="text_gbp">GBP</string>
    <string name="text_aud">AUD</string>
</resources>
